--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,3 +26,36 @@ html {
     max-width: 680px;
     padding: 0 15px;
   }
+
+  /* Sticky footer styles
+-------------------------------------------------- */
+.body-dark {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+  background-color: #202020;
+}
+.footer-dark {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: rgb(34, 37, 41);
+}
+
+.card-dark {
+  background-color: rgb(34, 37, 41);
+}
+
+.card-body-dark {
+  color: rgb(241, 241, 241) !important;
+}
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+.container {
+  width: auto;
+  max-width: 680px;
+  padding: 0 15px;
+}
