--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Анализатор цветов</title>
+    <title>Color Analyzer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./static/css/style.css"> -->
     <!-- <link rel="icon" href="./static/img/RGB.png" type="image/x-icon"> -->
@@ -14,17 +14,17 @@
       <div class="container-fluid">
         <img src="../static/img/RGB.png" alt="" width="30" height="30" class="d-inline-block align-top">
         <!-- <img src="./static/img/RGB.png" alt="" width="30" height="30" class="d-inline-block align-top"> -->
-        <a class="navbar-brand" href="#">Анализатор цветов</a>
+        <a class="navbar-brand" href="#">Color Analyzer</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Главная</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#" onclick="switch_theme()">Сменить тему</a>
+              <a class="nav-link active" aria-current="page" href="#" onclick="switch_theme()">Switch theme</a>
             </li>
           </ul>
         </div>
@@ -44,15 +44,15 @@
           <div class="col-6" style="height: 700px">
             <div class="card" style="width: 100%; height: 100%;">
               <div class="card-body">
-                <h5 class="card-title">Выбор картинки</h5>
+                <h5 class="card-title">Choose an image</h5>
                 <br>
-                <p class="card-text">Загрузите свою картинку, чтобы проанализировать самые частые цвета на ней
+                <p class="card-text">Load your image to analyze and show the most frequent colors on it
                 </p>
                 <form method="post" enctype="multipart/form-data" >
                 <input type="file" class="form-control-file" id="photo" name="file">
               </div>
               <div class="card-footer">
-                  <button type="submit" class="btn btn-primary">Отправить</button>
+                  <button type="submit" class="btn btn-primary">Analyze</button>
               </div>
               </form>
             </div>
@@ -61,7 +61,7 @@
           <div class="col-6" style="height: 700px;">
             <div class="card" style="width: 100%; height: 100%;">
               <div class="card-body">
-                <h5 class="card-title">Результат:</h5>
+                <h5 class="card-title">Result:</h5>
                 <br>
                 <img src={{image}} style="width: 80%;">
                 <br>
